crates/review-buddy/tests/snapshots/frames_v02__frame_settings_6_read_only_dusk_160x40.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: text(& render(& mut app))
---
 review buddy  ·  settings                                                                                                                                 Dusk
 Settings       ╭ Sources ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
                │ Where your pull and merge requests come from. Changes save to your config right away.                                                        │
› Sources       │ These sources come from /etc/xdg/review-buddy/config.toml. Review Buddy doesn't edit that file. Change them there, or move them into         │
                │ /home/u/.config/review-buddy/config.toml.                                                                                                    │
                │                                                                                                                                              │
                │   on     name               host                   sign-in        all scope                      token                                       │
                │ › on  GH github.com         github.com             gh             yes liminal-hq, acme, you      ✓ smorris · expires 2027-03-01              │
                │   on  GL work               gitlab.work.ca         keyring        yes platform                   ✗ Couldn't sign in to gitlab.work.ca: the…  │
                │   off GL old-lab            gitlab.old.example     env:OLD_LAB_T… yes everything you can see     · not tested                                │
                │                                                                                                                                              │
                │ github.com  ·  github.com                                                                                                                    │
                │ Signs in with your gh sign-in                                                                                                                │
                │ Covers        liminal-hq, acme, you                                                                                                          │
                │ Last check    ✓ signed in as smorris · scopes repo, read:org · expires 2027-03-01                                                            │
                │ Queue         in All · drafts left out · tag cyan                                                                                            │
                │ Defined       from /etc/xdg/review-buddy/config.toml (read-only here)                                                                        │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                                                                              │
                │                                                                                 ╭──────────────────────────────────────────────────────────╮ │
                │                                                                                 │· These sources come from /etc/xdg/review-buddy/config.…  │ │
                │                                                                                 ╰──────────────────────────────────────────────────────────╯ │
                ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 t test token  e edit  a add  space on/off  x remove  esc back  ? help
